--- a/forms/resetpassword.html
+++ b/forms/resetpassword.html
@@ -25,6 +25,8 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary" name="submit">Reset</button>
+                    <!-- <a href="login.html">Login page</a></p> -->
+               
                 </div>
 
                 <div class="form-group">
