--- a/forms/register.html
+++ b/forms/register.html
@@ -31,6 +31,11 @@
                     <button type="submit" class="btn btn-primary" name="submit">Register</button>
                     <a href="resetpassword.html" style="margin-left: 10%">Reset Password</a>
                 </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary" name="submit">Login</button>
+                    <a href="forms/login.html" style="margin-right: 10%">Login</a>
+                </div>
+
             </div>
             
       </form>
